--- a/about.html
+++ b/about.html
@@ -40,6 +40,40 @@
         <section>
             <img src="./images/about-hero.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
         </section>
+        
+        <section class="about-us">
+          
+          <div class="left-column">
+            <h1>ABOUT TYWLA</h1>
+            <img class="img-left" src="./images/twyla-profile.jpg" alt="Twyla Sands Profile Photo" title="Twyla Sands" width="200">
+
+            <p>Twyla Sands is proud to have been born and raised in Schitt’s Creek. Starting as a waitress at Café Tropical, Twyla bought the restaurant in 2018. As a testament to her dedication to her beloved town and famed restaurant, she decided to keep the original name that has been on the sign since 1947 but made one addition. She added her name ―Twyla’s Café Tropical.</p>
+
+            <p>The restaurant is famous for its extensive menu of traditional café fare, Mexican dishes, and Mediterranean cuisine with a tropical flair. Ask us and we can make most dishes vegetarian!</p>
+
+            <p>In addition to serving great food each day, we have a calendar full of special events! From karaoke to singles week, we have a wide range of activities for everyone to enjoy. Next time, you’re in Schitt’s Creek stop by and see us!</p>
+
+            <img class="bottom-img" src="./images/twyla-menu.jpg" alt="Twyla Sands with Cafe Tropical Menu" title="Twyla with Famous Menu" width="345">
+
+          </div>
+
+          <div class="right-column">
+            <h2>VIDEO GALLERY</h2>
+            <iframe width="382" height="215" src="https://www.youtube.com/embed/IFsT0zxTZA8?start=130" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <iframe width="382" height="215" src="https://www.youtube.com/embed/0mP593p6CtQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <iframe width="382" height="215" src="https://www.youtube.com/embed/8LTtQJlbRiA?start=130" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+
+
+          <div class="single-column">
+            <h2>CONTACT TWYLA</h2>
+            <p><strong>Phone:</strong> (412) 867-5309</p>
+            <p><strong>Email:</strong><a href="twylasands@cafetropical.com"> twylasands@cafetropical.com</a></p>
+            <p><strong>Address:</strong> 4200 Main St., Schitt's Creek, ON L0C 1A0, Canada</p>
+          </div>
+        </section>
 
     </main>
 
