added content and styling to the events page

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <nav>
             <ul>
               <li class="header-text"><a href="index.html">HOME</a></li>
-              <li class="header-text"><a href="about.html">ABOUT US</a></li>
+              <li class="header-text"><a class="active" href="about.html">ABOUT US</a></li>
               <li class="header-text"><a href="menu.html">MENU</a></li>
               <li class="header-text"><a href="events.html">EVENTS</a></li>
             </ul>
@@ -40,7 +40,7 @@
         <section>
             <img src="./images/about-hero.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
         </section>
-        
+
         <section class="about-us">
           
           <div class="left-column">
@@ -67,11 +67,11 @@
           </div>
 
 
-          <div class="single-column">
+          <div id="contact" class="single-column">
             <h2>CONTACT TWYLA</h2>
-            <p><strong>Phone:</strong> (412) 867-5309</p>
-            <p><strong>Email:</strong><a href="twylasands@cafetropical.com"> twylasands@cafetropical.com</a></p>
-            <p><strong>Address:</strong> 4200 Main St., Schitt's Creek, ON L0C 1A0, Canada</p>
+            <p><strong>Phone: </strong> (412) 867-5309</p>
+            <p><strong>Email: </strong><a href="mailto:twylasands@cafetropical.com">twylasands@cafetropical.com</a></p>
+            <p><strong>Address: </strong> 4200 Main St., Schitt's Creek, ON L0C 1A0, Canada</p>
           </div>
         </section>
 
