--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
               <li class="header-text"><a href="index.html">HOME</a></li>
               <li class="header-text"><a href="about.html">ABOUT US</a></li>
               <li class="header-text"><a href="menu.html">MENU</a></li>
-              <li class="header-text"><a href="events.html">EVENTS</a></li>
+              <li class="header-text"><a class="active" href="events.html">EVENTS</a></li>
             </ul>
         </nav>
       </div>
@@ -37,8 +37,193 @@
 </header>
 
     <main class="main-container">
+
+        <section class="three-column">
+          <img class="hero" src="./images/events-hero.jpg" alt="Moira Rose Directing Event" title="Moira Rose at Singles Week">
+
+          <span class="blue-heading"><h1 >UPCOMING EVENTS</h1></span>
+
+          <div class="event-left">
+            <img src="images/singles-week.png" alt="Couple Kissing at Singles Week" width="200">
+
+            <span class="green-heading"><h2>SINGLES WEEK</h2></span>
+
+            <p>This popular event is back for its second year! Are you single and ready to find the one for you? Maybe they are right under your nose in Schitt's Creek!</p>
+
+            <span class="button"><a href="event-one.html">Click Here to Sign-up</a></span>
+          </div>
+
+          <div class="event-right">
+            <img src="images/karaoke.png" alt="Man Singin Karaoke" width="200">
+
+            <span class="green-heading"><h2>KARAOKE</h2></span>
+
+            <p>Held on the first Saturday of the month, our karaoke nights are simply the best!</p>
+
+            <span class="button"><a href="event-two.html">Click Here to Sign-up</a></span>
+          </div>
+
+          <div class="event-center">
+            <img src="images/premiere.png" alt="Moira Rose at Film Premiere" width="200">
+
+            <span class="green-heading"><h2><em>THE CROWS HAVE EYES III</em>- PREMIERE AFTER PARTY</h2></span>
+
+            <p>Film and television's Moira Rose is premiering a new film on Interflix! Come out and support our most famous Schitt's Creek resident at her premiere after party.</p>
+
+            <span class="button"><a href="event-three.html">Click Here to Sign-up</a></span>
+          </div>
+        </section>
+      
         <section>
-            <img src="./images/about-hero.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
+
+          <div class="calendar">
+            <h2>DECEMBER EVENTS</h2>
+            <table>
+              <thead>
+                <tr>
+                  <th>Sunday</th>
+                  <th>Monday</th>
+                  <th>Tuesday</th>
+                  <th>Wednesday</th>
+                  <th>Thursday</th>
+                  <th>Friday</th>
+                  <th>Saturday</th>
+                </tr>
+              </thead>
+
+              <tbody class="numbers">
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td>1</td>
+                  <td>2</td>
+                  <td>3</td>
+                  <td>4</td>
+                </tr>
+              </tbody>
+
+              <tbody class="events">
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td><a href="event-two.html">Karaoke Night</a></td>
+                </tr>
+              </tbody> 
+
+              <tbody class="numbers">
+                <tr>
+                  <td>5</td>
+                  <td>6</td>
+                  <td>7</td>
+                  <td>8</td>
+                  <td>9</td>
+                  <td>10</td>
+                  <td>11</td>
+                </tr>
+              </tbody>
+
+              <tbody class="events">
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td><p>Group Sudoku</p></td>
+                  <td></td>
+                  <td></td>
+                  <td><a href="event-three.html"><em>The Crows Have Eyes III</em>- Premiere After Party</a></td>
+                  <td></td>
+                </tr>
+              </tbody>
+
+              <tbody class="numbers">
+                <tr>
+                  <td>12</td>
+                  <td>13</td>
+                  <td>14</td>
+                  <td>15</td>
+                  <td>16</td>
+                  <td>17</td>
+                  <td>18</td>
+                </tr>
+              </tbody>
+
+              <tbody class="events">
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td><p>Group Sudoku</p></td>
+                  <td></td>
+                  <td><a href="event-one.html">Singles' Week</a></td>
+                  <td><a href="event-one.html">Singles' Week</a></td>
+                  <td><a href="event-one.html">Singles' Week</a></td>
+                </tr>
+              </tbody>
+
+              <tbody class="numbers">
+                <tr>
+                  <td>19</td>
+                  <td>20</td>
+                  <td>21</td>
+                  <td>22</td>
+                  <td>23</td>
+                  <td>24</td>
+                  <td>25</td>
+                </tr>
+              </tbody>
+
+              <tbody class="events">
+                <tr>
+                  <td><a href="event-one.html">Singles' Week</a></td>
+                  <td></td>
+                  <td><p>Group Sudoku</p></td>
+                  <td></td>
+                  <td><p>Jazzagals Holiday Party</p></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+
+              <tbody class="numbers">
+                <tr>
+                  <td>26</td>
+                  <td>27</td>
+                  <td>28</td>
+                  <td>29</td>
+                  <td>30</td>
+                  <td>31</td>
+                  <td></td>
+                </tr>
+              </tbody>
+
+              <tbody class="events">
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td><p>Group Sudoku</p></td>
+                  <td></td>
+                  <td><p>Wine Tasting with Herb Ertlinger Winery</p></td>
+                  <td><p>New Year's Eve Party</p></td>
+                  <td></td>
+                </tr>
+              </tbody>
+
+            </table>
+
+          </div>
+        </section>
+
+        <section>
+          <div class="single-column">
+            <h2>CATERING & EVENT RENTALS</h2>
+            <p>We want to be a part of your next special occasion!</p>
+            <p>From weddings to birthday parties, we offer a wide range of catering packages that are perfect gatherings both large and small.</p>
+            <p>Looking to rent Twyla's Café Tropical as an event space? Contact Twyla about our pricing, services offered, and menu options. We look forward to hosing you!</p>
+            <span class="button"><a href="about.html#contact">Click Here to Contact Twyla</a></span>
+          </div>
         </section>
 
     </main>
