--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="header-text">
         <nav>
             <ul>
-              <li class="header-text"><a href="index.html">HOME</a></li>
+              <li class="header-text"><a class="active" href="index.html">HOME</a></li>
               <li class="header-text"><a href="about.html">ABOUT US</a></li>
               <li class="header-text"><a href="menu.html">MENU</a></li>
               <li class="header-text"><a href="events.html">EVENTS</a></li>
