--- a/event-one.html
+++ b/event-one.html
@@ -27,7 +27,7 @@
               <li class="header-text"><a href="index.html">HOME</a></li>
               <li class="header-text"><a href="about.html">ABOUT US</a></li>
               <li class="header-text"><a href="menu.html">MENU</a></li>
-              <li class="header-text"><a href="events.html">EVENTS</a></li>
+              <li class="header-text"><a class="active" href="events.html">EVENTS</a></li>
             </ul>
         </nav>
       </div>
