--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
             <ul>
               <li class="header-text"><a href="index.html">HOME</a></li>
               <li class="header-text"><a href="about.html">ABOUT US</a></li>
-              <li class="header-text"><a href="menu.html">MENU</a></li>
+              <li class="header-text"><a class="active" href="menu.html">MENU</a></li>
               <li class="header-text"><a href="events.html">EVENTS</a></li>
             </ul>
         </nav>
