added styling/ content to home page, fixed sizing

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
     <main class="main-container">
         <section>
-            <img src="./images/about-hero.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
+            <img src="./images/about-hero-large.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
         </section>
 
         <section class="about-us">
@@ -53,17 +53,17 @@
 
             <p>In addition to serving great food each day, we have a calendar full of special events! From karaoke to singles week, we have a wide range of activities for everyone to enjoy. Next time, you’re in Schitt’s Creek stop by and see us!</p>
 
-            <img class="bottom-img" src="./images/twyla-menu.jpg" alt="Twyla Sands with Cafe Tropical Menu" title="Twyla with Famous Menu" width="345">
+            <img class="bottom-img" src="./images/twyla-menu-large.jpg" alt="Twyla Sands with Cafe Tropical Menu" title="Twyla with Famous Menu" width="450">
 
           </div>
 
           <div class="right-column">
             <h2>VIDEO GALLERY</h2>
-            <iframe width="382" height="215" src="https://www.youtube.com/embed/IFsT0zxTZA8?start=130" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="445" height="250" src="https://www.youtube.com/embed/IFsT0zxTZA8?start=130" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            <iframe width="382" height="215" src="https://www.youtube.com/embed/0mP593p6CtQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="445" height="250" src="https://www.youtube.com/embed/0mP593p6CtQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            <iframe width="382" height="215" src="https://www.youtube.com/embed/8LTtQJlbRiA?start=130" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="445" height="250" src="https://www.youtube.com/embed/8LTtQJlbRiA?start=130" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
 
 
