--- a/events.html
+++ b/events.html
@@ -37,9 +37,8 @@
 </header>
 
     <main class="main-container">
-
         <section class="three-column">
-          <img class="hero" src="./images/events-hero.jpg" alt="Moira Rose Directing Event" title="Moira Rose at Singles Week">
+          <img class="hero" src="./images/events-hero-large.jpg" alt="Moira Rose Directing Event" title="Moira Rose at Singles Week">
 
           <span class="blue-heading"><h1 >UPCOMING EVENTS</h1></span>
 
@@ -53,7 +52,7 @@
             <span class="button"><a href="event-one.html">Click Here to Sign-up</a></span>
           </div>
 
-          <div class="event-right">
+          <div class="event-center">
             <img src="images/karaoke.png" alt="Man Singin Karaoke" width="200">
 
             <span class="green-heading"><h2>KARAOKE</h2></span>
@@ -63,7 +62,7 @@
             <span class="button"><a href="event-two.html">Click Here to Sign-up</a></span>
           </div>
 
-          <div class="event-center">
+          <div class="event-right">
             <img src="images/premiere.png" alt="Moira Rose at Film Premiere" width="200">
 
             <span class="green-heading"><h2><em>THE CROWS HAVE EYES III</em>- PREMIERE AFTER PARTY</h2></span>
