--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <title>Twyla's Café Tropical</title>
 
     <link rel="stylesheet" href="css/styles.css">
+    <link href="lightbox/src/css/lightbox.css" rel="stylesheet" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Quattrocento+Sans&family=Righteous&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Quattrocento+Sans&family=Righteous&display=swap" rel="stylesheet">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="scripts/scripts.js" type=>"text/javascript"</script>
 
   </head>
   <body>
@@ -38,8 +43,93 @@
 
     <main class="main-container">
         <section>
-            <img src="./images/about-hero.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
+            <img class="hero" src="./images/home-hero-large.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
         </section>
+
+        <span class="home-heading"><h1 >WELCOME TO TWYLA'S CAFÉ TROPICAL!</h1></span>
+
+        <section class="three-column-home">
+
+          <div class="event-left">
+          <div class="home-image">
+            <a href="about.html"><img class="main-image" src="images/aboutus-home-blue.png" alt="Twyla Taking a Customer Order" width="200"></a>
+            <a href="about.html"><img class="hover-image" src="images/aboutus-home.png" alt="Twyla Taking a Customer Order" width="200"></a>
+          </div>
+          <h2>ABOUT US</h2>
+          </div>
+
+          <div class="event-center">
+            <div class="home-image">
+              <a href="menu.html"><img class="main-image" src="images/menu-home-blue.png" alt="Moira Rose Looking at Menu" width="200"></a>
+              <a href="menu.html"><img class="hover-image" src="images/menu-home.png" alt="Moira Rose Looking at Menu" width="200"></a>
+            </div>
+            <h2>MENU</h2>
+          </div>
+
+          <div class="event-right">
+            <div class="home-image">
+              <a href="events.html"><img class="main-image" src="images/specialevents-home-blue.png" alt="Moira Rose Looking at Menu" width="200"></a>
+              <a href="events.html"><img class="hover-image" src="images/specialevents-home.png" alt="Moira Rose Looking at Menu" width="200"></a>
+            </div>
+            <h2>SPECIAL EVENTS</h2>
+          </div>
+
+        </section>
+
+
+<!--Reviews Animation Start   
+          <section class="three-column-home">
+          <span class="home-heading"><h1 >WELCOME TO TWYLA'S CAFÉ TROPICAL!</h1></span>
+
+          <div class="event-left">
+            <a href="about.html"><img src="images/aboutus-home.png" alt="Twyla Taking a Customer Order" width="200"></a>
+            <h2>ABOUT US</h2>
+          </div>
+
+          <div class="event-center">
+            <a href="menu.html"><img src="images/menu-home.png" alt="Moira Rose Looking at Menu" width="200"></a>
+            <h2>MENU</h2>
+          </div>
+
+          <div class="event-right">
+            <a href="events.html"><img src="images/specialevents-home.png" alt="Moira Rose Looking at Menu" width="200"></a>
+            <h2>SPECIAL EVENTS</h2>
+          </div>
+        </section>
+-->
+
+<!--Reviews Animation Start-->
+        <section class="reviews">
+          <h2>REVIEWS</h2>
+          <div class="review-one"><p><span class="quote-mark">“</span></p><p>Did someone say fine dining? The Café Tropical has certainly been described as ‘fine.'<p><br><p><span class="quote-mark">”</span></p>
+          <p>-Moira Rose, Actress-<em>Sunrise Bay</em></p></div>
+
+          <div class="review-two"><p><span class="quote-mark">“</span></p><p>Twyla makes the best smoothies in town. Perfect for after a run!<p><br><p><span class="quote-mark">”</span></p>
+            <p>-Alexis Rose</p></div>
+
+          <div class="review-three"><p><span class="quote-mark">“</span></p><p>The BLTs are always hot and delicious! Make sure to pre-order yourself a tuna sandwich, too!<p><br><p><span class="quote-mark">”</span></p>
+          <p>-Ronald Schitt</p></div>
+        </section>
+        
+<!--Reviews Animation End-->
+
+<!--Lightbox Start-->        
+        <section class="gallery">
+          <div class="image-gallery">
+          <a href="images/moira-rose-twyla-sands.jpg" data-lightbox="image-1" data-title="Twyla with Film and Television's Moira Rose"><img src="images/moira-rose-twyla-sands.jpg" alt="Twyla with Moira Rose"></a>
+
+          <a href="images/twyla-cafe.jpg" data-lightbox="image-1" data-title="Twyla with customer"><img src="images/twyla-cafe.jpg" alt="Twyla with Customer"></a>
+
+          <a href="images/cafe-tropical-outside.jpg" data-lightbox="image-1" data-title="Welcome to Twyla's Café Tropical!"><img src="images/cafe-tropical-outside.jpg" alt="Exterior of Building"></a>
+
+          <a href="images/cafe-owner.jpg" data-lightbox="image-1" data-title="Twyla takes a customer's order."><img src="images/cafe-owner.jpg" alt="Twyla Sands"></a>
+
+          <a href="images/cafe-tropical-sign.png" data-lightbox="image-1" data-title="The famous Café Tropical mural"><img src="images/cafe-tropical-sign.png" alt="Inside of Cafe"></a>
+
+          <a href="images/cafe-tropical-customers.jpg" data-lightbox="image-1" data-title="The Rose Family enjoying breakfast."><img src="images/cafe-tropical-customers.jpg" alt="Customers Eating breakfast"></a>
+        </div>
+        </section>
+<!--Lightbox End-->       
 
     </main>
 
@@ -57,5 +147,6 @@
     </div>
   </footer>
 
+  <script src="lightbox/src/js/lightbox.js"></script>
   </body>
 </html>
