added content/ styling to menu page

--- a/menu.html
+++ b/menu.html
@@ -36,9 +36,138 @@
 
 </header>
 
-    <main class="main-container">
+    <main class="main-container-menu">
         <section>
-            <img src="./images/about-hero.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
+            <span class="menu-heading"><h1>TWYLA'S CAFE TROPICAL MENU</h1></span>
+        </section>
+
+        <section>
+          <div class="menu-left">
+            <h2 id="specials">WEEKLY SPECIALS</h2>
+            <p>Monday- Sushi Summer Rolls- $4.95</p>
+            <p>Tuesday- Green Curry & Papaya Salad- $7.95</p>
+            <p>Wednesday- Fish Tacos- $6.95</p>
+            <p>Thursday- Corn Chowder- $4.95</p>
+            <p>Friday- Tropical Pizza- $10</p>
+            <p>Saturday- Chef Surprise!- $9.95</p>
+
+            <h2 id="drinks">DRINK SPECIALS- $5</h2>
+            <p>Blue Hawaiian </p>
+            <p>Pina Coloda</p>
+            <p>Bahama Mama</p>
+            <p>Mojito</p>
+
+            <h2 id="smoothie">SMOOTHIES</h2>
+            <p>Meadow Harvest</p>
+            <p>No Greens-Green</p>
+            <p>Surprise Me</p>
+            <p>Pink Parrot Tropical</p>
+            <p>Hawaiian Hondeydew</p>
+
+            <h2 id="wine">WINES & BUBBLY</h2>
+            <p>Moira Rose’s Rosé</p>
+            <p>Zchampagne</p>
+            <p>Herb Ertlinger Fruit Wine</p>
+
+            <h2 id="beverage">OTHER BEVERAGES</h2>
+            <p>Coffee</p>
+            <p>Tea</p>
+            <p>Soda</p>
+            <p>Freshly Squeezed Orange Juice</p>
+            <p>Milk</p>
+            <p>Sparkly Water</p>
+            <p>Latte- Hot or Iced</p>
+
+            <h2 id="breakfast">BREAKFAST</h2>
+            <p>Parfait cup- $5</p>
+            <p>Fruit Cup- $5</p>
+            <p class="food-item">Hawaiian Omelette- $9</p>
+            <p class="food">Ham, pineapple, and swiss cheese</p>
+            <p class="food-item">The Hangover- $15</p>
+            <p class="food">Eggs any style with bacon and dry toast</p>
+            <p class="food-item">Bob’s Bagel- $16</p>
+            <p class="food">Lox, capers, cream cheese, onion</p>
+            <p class="food-item">Cinnamon Bun Pancakes- $16</p>
+            <p class="food">Served with boozy vanilla bourbon ice cream</p>
+            <p class="food-item">Rosebud Motel's 'Continental Breakfast'- $8</p>
+            <p class="food">Ivan’s freshly baked cinnamon bun</p>
+            <p>Spinach and Egg White Omelette- $10</p>
+            <p>Stack of Pancakes-$8</p>
+            <p class="food-item">Farmer’s Breakfast- $10</p>
+            <p class="food">Fresh biscuits with sausage gravy served with a side of bacon</p>
+
+            <h2 id="apps">OTHER BEVERAGES</h2>
+            <p>Mozzarella sticks- $8</p>
+            <p>Coconutty Onion Rings- $6</p>
+            <p>The Tropical Platter- $15</p>
+            <p>Ahi Triangles- $8</p>
+            <p>Bruschetta- $7</p>
+            <p>Calamari- $11</p>
+            <p>Hummus- $7</p>
+            <p>Charred Eggplant- $7</p>
+            <p>Tabbouleh- $6</p>
+            <p>Stuffed Grape Leaves- $7</p>
+            <p>Chef Borek- $7</p>
+            <p>Cheese Fondue- $6</p>
+
+            <h2 id="salad">SALADS</h2>
+            <p>Hawaiian Caprese Salad- $14</p>
+            <p>Garden Salad- $13</p>
+            <p>Shepard Salad- $13</p>
+            <p>White Bean Salad- $12</p>
+            <p>Greek Salad- $11</p>
+            <p>Summer Salad- $15</p>
+
+            <h2 id="handhelds">HANDHELDS</h2>
+            <p class="food">All sandwiches are served with French Fries </p>
+            <p>Cobb Salad Sandwich-$15</p>
+            <p>Chicken Caesar Sandwich-$14</p>
+            <p>Classic Burger-$13</p>
+            <p>Portobello Burger-$15</p>
+            <p>Classic Reuben-$12</p>
+            <p>Falafel Wrap- $13</p>
+            <p>Tuna Salad- $6</p>
+            <p>Classic BLT-$7</p>
+
+            <h2 id="entree">ENTRÉES</h2>
+            <p>Moira’s Mother’s Enchiladas- $14</p>
+            <p>Breaded Fried Shrimp- $15</p>
+            <p>Lamb Chops- $17</p>
+            <p>Fried Cod- $14</p>
+            <p>Spaghetti and Meatballs-$16</p>
+            <p>Soy Garlic Chicken-$16</p>
+            <p>Santorini Beach- $18</p>
+            <p>Hawaiian BBQ Ribs-$20</p>
+            <p>Chicken and Waffles- $11</p>
+            <p>Meatloaf Dinner-$13</p>
+            <p>Country Fried Steak- $14</p>
+            <p>Turkey and Stuffing-$13</p>
+
+            <h2 id="dessert">DESSERTS</h2>
+            <p>Rhubarb Pie- $4</p>
+            <p>Chocolate Cake- $4</p>
+            <p>Root Beer Float- $5</p>
+            <p>Lava Cake- $4</p>
+            <p>Cinnamon Roll-$6</p>
+            <p>Angel Food Cake- $4</p>
+          </div>
+        
+          <div class="sidebar">
+            <ul>
+              <li><img src="images/cafe-wave.png" alt="Wave Logo" width="200"></li>
+              <li><a href="#specials"><img src="images/bullet.png" alt="bullet point" width="15"> WEEKLY SPECIALS</li></a>
+              <li><a href="#drinks"><img src="images/bullet.png" alt="bullet point" width="15"> DRINK SPECIALS</li></a>
+              <li><a href="#smoothie"><img src="images/bullet.png" alt="bullet point" width="15"> SMOOTHIES</li></a>
+              <li><a href="#wine"><img src="images/bullet.png" alt="bullet point" width="15"> WINES & BUBBLY</li></a>
+              <li><a href="#beverage"><img src="images/bullet.png" alt="bullet point" width="15"> OTHER BEVERAGES</li></a>
+              <li><a href="#breakfast"><img src="images/bullet.png" alt="bullet point" width="15"> BREAKFAST</li></a>
+              <li><a href="#apps"><img src="images/bullet.png" alt="bullet point" width="15"> APPETIZERS</li></a>
+              <li><a href="#salad"><img src="images/bullet.png" alt="bullet point" width="15"> SALADS</li></a>
+              <li><a href="#handhelds"><img src="images/bullet.png" alt="bullet point" width="15"> HANDHELDS</li></a>
+              <li><a href="#entree"><img src="images/bullet.png" alt="bullet point" width="15"> ENTRÉES</li></a>
+              <li><a href="#dessert"><img src="images/bullet.png" alt="bullet point" width="15"> DESSERTS</li></a>
+            </ul>
+          </div>
         </section>
 
     </main>
