added event info page styling, contact form css

--- a/about.html
+++ b/about.html
@@ -54,6 +54,11 @@
             <p>In addition to serving great food each day, we have a calendar full of special events! From karaoke to singles week, we have a wide range of activities for everyone to enjoy. Next time, you’re in Schitt’s Creek stop by and see us!</p>
 
             <img class="bottom-img" src="./images/twyla-menu-large.jpg" alt="Twyla Sands with Cafe Tropical Menu" title="Twyla with Famous Menu" width="450">
+            
+            <details>
+              <summary>The Secret Behind Our Success</summary>
+              <p>It's you! It's the love our customers show our restaurant each day. We couldn't do it without you.</p>
+            </details>
 
           </div>
 
