--- a/event-three.html
+++ b/event-three.html
@@ -38,7 +38,20 @@
 
     <main class="main-container">
         <section>
-            <img src="./images/about-hero.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
+            <img src="./images/crows-have-eyes.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
+        </section>
+
+        <section class="event-content">
+
+          <h1><em>THE CROWS HAVE EYES III</em>- PREMIERE AFTER PARTY</h1>
+
+          <h3>Friday, December 10th at 6:00pm</h3>
+
+          <p>Celebrate the premiere of the much anticipated third installment of <em>The Crows Have Eyes</em> franchise. <em>The Crows Have Eyes: The Crowening</em>  stars our very own Moira Rose!</p>
+
+          <p><em>“The Crows Have Eyes III is good fun... The film showcases the emotional depth and intellectual capacity of our oft-maligned friend, the crow... Moira Rose, as Dr. Clara Mandrake, is delightfully unhinged...” — Ornithology Today</em></p>
+
+          <p>Hosted at Twyla’s Café Tropical, we will be showing the film with a zchampagne toast and a special appearance by the star herself, Moira Rose. </p>
         </section>
 
     </main>
