--- a/event-two.html
+++ b/event-two.html
@@ -38,8 +38,24 @@
 
     <main class="main-container">
         <section>
-            <img src="./images/about-hero.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
+            <img src="./images/karaoke.jpg" alt="Man and Woman Singin Karaoke" title="David Rose Sings Karaoke">
         </section>
+
+        <section class="event-content">
+        <h1>KARAOKE</h1>
+
+        <p>We host karaoke on the first Saturday of every month from 8:00pm to midnight! Our DJ, Ray, has a specially curated library of music to chose from. Sing your heart out to these classics:</p>
+
+        <ul>
+          <li><em>Total Eclipse of the Heart</em>- Bonnie Tyler</li>
+          <li><em>Tequila Sunrise</em>- The Eagles</li>
+          <li><em>One Week</em>- The Barenaked Ladies</li>
+          <li><em>I’m Every Woman</em>- Chaka Khan</li>
+          <li><em>The Best</em>-Tina Turner</li>
+          <li><strong>and many more!</strong></li>
+        </ul>
+        <p>In addition to karaoke night, enjoy our featured drink special. This month, it’s bottomless Irish Car bombs for $15!</p>
+      </section>
 
     </main>
 
