--- a/events.html
+++ b/events.html
@@ -60,7 +60,7 @@
 
             <p>Held on the first Saturday of the month, our karaoke nights are simply the best!</p>
 
-            <span class="button"><a href="event-two.html">Click Here to Sign-up</a></span>
+            <span class="button"><a href="event-two.html">Click Here for More Info</a></span>
           </div>
 
           <div class="event-right">
@@ -70,7 +70,7 @@
 
             <p>Film and television's Moira Rose is premiering a new film on Interflix! Come out and support our most famous Schitt's Creek resident at her premiere after party.</p>
 
-            <span class="button"><a href="event-three.html">Click Here to Sign-up</a></span>
+            <span class="button"><a href="event-three.html">Click Here for More Info</a></span>
           </div>
         </section>
       
