--- a/menu.html
+++ b/menu.html
@@ -37,8 +37,8 @@
 </header>
 
     <main class="main-container-menu">
-        <section>
-            <span class="menu-heading"><h1>TWYLA'S CAFE TROPICAL MENU</h1></span>
+        <section id="top">
+            <span class="menu-heading"><h1>TWYLA'S CAFÉ TROPICAL MENU</h1></span>
         </section>
 
         <section>
@@ -53,7 +53,7 @@
 
             <h2 id="drinks">DRINK SPECIALS- $5</h2>
             <p>Blue Hawaiian </p>
-            <p>Pina Coloda</p>
+            <p>Pina Colada</p>
             <p>Bahama Mama</p>
             <p>Mojito</p>
 
@@ -96,7 +96,7 @@
             <p class="food-item">Farmer’s Breakfast- $10</p>
             <p class="food">Fresh biscuits with sausage gravy served with a side of bacon</p>
 
-            <h2 id="apps">OTHER BEVERAGES</h2>
+            <h2 id="apps">APPETIZERS</h2>
             <p>Mozzarella sticks- $8</p>
             <p>Coconutty Onion Rings- $6</p>
             <p>The Tropical Platter- $15</p>
@@ -154,7 +154,7 @@
         
           <div class="sidebar">
             <ul>
-              <li><img src="images/cafe-wave.png" alt="Wave Logo" width="200"></li>
+              <li><a href="#top"><img src="images/cafe-wave.png" alt="Wave Logo" width="200"></a></li>
               <li><a href="#specials"><img src="images/bullet.png" alt="bullet point" width="15"> WEEKLY SPECIALS</li></a>
               <li><a href="#drinks"><img src="images/bullet.png" alt="bullet point" width="15"> DRINK SPECIALS</li></a>
               <li><a href="#smoothie"><img src="images/bullet.png" alt="bullet point" width="15"> SMOOTHIES</li></a>
